# xfce4-TileRole-plugin

./: README.md  configure.ac.in
icons/: Makefile  Makefile.in
icons/16x16/: Makefile  Makefile.am  Makefile.in
icons/22x22/: Makefile  Makefile.am  Makefile.in
icons/24x24/: Makefile  Makefile.am  Makefile.in
icons/256x256/: Makefile  Makefile.am  Makefile.in
icons/32x32/: Makefile  Makefile.am  Makefile.in
icons/48x48/: Makefile  Makefile.am  Makefile.in
icons/64x64/: Makefile  Makefile.am  Makefile.in
panel-plugin/: Makefile.am  TileRole.c  TileRole.desktop.in.in
panel-plugin/.deps/: xfce4_calculator_plugin-calculator.Po  xfce4_calculator_plugin-eval.Po  xfce4_calculator_plugin-lexer.Po  xfce4_calculator_plugin-parser.Po  xfce4_calculator_plugin-parsetree.Po
po/: Makefile  Makefile.in  POTFILES
